# sudoku

./: .gitignore  LICENSE  README.md  pyproject.toml  sudoku.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml
source/: sudoku.py
src/sudokuz/: sudoku.py
tests/: test_sudoku.py
